removed scrolling, removed headroom, fixed scrollbar top

--- a/src/App.css
+++ b/src/App.css
@@ -20,15 +20,15 @@
 #scrollTop {
   width: 4%;
   position: sticky;
-  bottom: 2rem;
-  right: 2rem;
+  bottom: 10%;
+  right: 10%;
   float: right;
   z-index: 99999;
   transition: all .1s ease-in-out;
 }
 
 #scrollTop:hover, #scrollTop:active {
-  transform: scale(1.3)
+  transform: translateY(-10px)
 }
 
 .title {
@@ -58,7 +58,7 @@
 }
 
 /* headroom */
-headroom {
+/* headroom {
   top: 0;
   left: 0;
   right: 0;
@@ -78,7 +78,7 @@ headroom--unpinned {
 headroom--pinned {
   position: fixed;
   transform: translateY(0%);
-}
+} */
 
 
 @media only screen and (max-width: 600px) {
